# socialpreview-dashboard

./: .gitignore  ARCHITECTURE.md  FRONTEND.md  README.md
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/migrations/: 20250101000000_create_users.sql  20250102000000_create_features_tables.sql  20250103000000_create_future_plans_schedule.sql  20250104000000_add_profile_pictures.sql  20250105000000_create_ticket_comments.sql  20250106000000_add_2fa_support.sql  20250107000000_create_services.sql
backend/src/: auth.rs  database.rs  handlers_2fa.rs  handlers_features.rs  handlers_services.rs  handlers_tasks.rs  handlers_tickets.rs  main.rs  middleware.rs  models.rs  tests_auth.rs  totp.rs
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ErrorBoundary.tsx  ForgotPasswordScreen.tsx  LoginScreen.tsx  ProtectedRoute.tsx
frontend/src/components/dashboard/: DashboardLayout.tsx  TeamDashboard.tsx  UserDashboard.tsx
frontend/src/components/ui/: Button.tsx  (+3 more)
frontend/src/config/: config.ts
frontend/src/contexts/: AuthContext.tsx  LanguageContext.tsx
frontend/src/hooks/: useAuth.ts  useForm.ts  usePasswordReset.ts
frontend/src/i18n/: translations.ts
frontend/src/types/: auth.types.ts  dashboard.types.ts  index.ts  language.types.ts
frontend/src/utils/: auth.test.ts  auth.ts  passwordReset.ts  sanitize.ts  validation.ts
(+32 files in other folders)
